--- a/Views/partials/Header.ejs
+++ b/Views/partials/Header.ejs
@@ -37,6 +37,13 @@
                         </svg>
                         <span>Cart</span>
                     </a>
+                    <a href="/account" class="account-link" title="Account" style="margin-right:1.5rem;display:inline-flex;align-items:center;gap:0.3rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
+                        <span>Account</span>
+                    </a>
                     <div class="auth-buttons">
                         <a href="/logout" class="btn btn-primary">Log out</a>
                     </div>
