--- a/Public/Styles/account.css
+++ b/Public/Styles/account.css
@@ -191,18 +191,33 @@
   .toggle-group {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
   }
   
   .toggle-item {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   
   .toggle-item label {
     font-size: 0.875rem;
     cursor: pointer;
+    margin-bottom: 0;
+  }
+  
+  .newsletter-toggle {
+    align-items: flex-start;
+  }
+  
+  .toggle-label {
+    flex: 1;
+    margin-right: 1rem;
+  }
+  
+  .toggle-label .input-hint {
+    margin-top: 0.25rem;
+    margin-bottom: 0;
   }
   
   .toggle {
@@ -217,6 +232,8 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    flex-shrink: 0;
+    margin-top: 0.25rem;
   }
   
   .toggle:checked {
