--- a/Views/partials/Footer.ejs
+++ b/Views/partials/Footer.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,6 +17,8 @@
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
 
+<!-- Scripts -->
+<script src="/JavaScript/main.js"></script>
 
 </body>
 </html>
